feat: update opentalk universal link

--- a/testEbookDeepLink.html
+++ b/testEbookDeepLink.html
@@ -22,6 +22,8 @@
 <h1><a href='hk01uat://digitalMagazine?path=account'>account deeplink</a></h1>
 <h1><a href='https://ebook.hktester.com/account/1544723'>account universal</a></h1>
 
+<h1><a href='https://opentalk.hktester.com/story/60b8569acb0d7e0017e2689b'>opentalk<a><h1>
+
 
 </body>
 </html>
